fix responsive layout breaking

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -70,4 +70,7 @@ nav, #section01, #section03, #section04 {
 
 #section05 {
     height: 80vh;
+    @media screen  {
+        height: unset;
+    }
 }
